# rust_web_app_with_tera_with_assets

./: Cargo.toml  README.md
src/: controllers.rs  main.rs  tera_setup.rs
src/templates/: greet.html
